--- a/css/style.css
+++ b/css/style.css
@@ -92,16 +92,9 @@ body {
     min-height: 100vh;
 }
 .hero-text {
-    position: relative;
-    display: inline-block;
+
 }
-.cursor {
-    color: white;
-    font-size: 3rem;
-}
-.blinking{
-    animation: blink 1s step-start infinite;
-}
+
 @keyframes blink {
     50% {opacity: 0;}
 }
@@ -132,6 +125,15 @@ body {
     font-size: 1.1rem;
     margin-bottom: 2rem;
     opacity: 0.8;
+    display: inline;
+}
+
+.cursor {
+    color: white;
+    font-size: 3rem;
+}
+.blinking{
+    animation: blink 1s step-start infinite;
 }
 
 .hero-buttons {
