--- a/css/style.css
+++ b/css/style.css
@@ -106,31 +106,42 @@ body {
 .hero-title {
     font-size: 3rem;
     font-weight: bold;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
+    line-height: 1;
+
 }
 
 .hero-highlight {
     font-size: 3rem;
     font-weight: bold;
     color: #f39c12;
+    line-height: 1;
+
 }
 
 .hero-subtitle {
     font-size: 1.5rem;
     margin-bottom: 1rem;
     opacity: 0.9;
+    line-height: 1;
+
 }
 
 .hero-description {
     font-size: 1.1rem;
     margin-bottom: 2rem;
     opacity: 0.8;
-    display: inline;
+    line-height: 1;
+
 }
 
 .cursor {
     color: white;
-    font-size: 3rem;
+    /* font-size: 3rem; */
+    /* line-height: 1; */
+    overflow-y: visible;
+    border-left: 2px solid red;
+    
 }
 .blinking{
     animation: blink 1s step-start infinite;
