--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,31 @@ body.dark-mode {
     transition: all 0.3s ease;
 }
 
+/*Progress Bar*/
+#scroll-progress-indicator {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 5px;
+    background-color: #3498db;
+    z-index: 1001;
+    transition: width 0.1s linear;
+}
+
+body.dark-mode #scroll-progress-indicator {
+    background-color: #88c0d8;
+}
+
+.nav-link.active {
+    color: #3498db;
+    font-weight: 700;
+}
+
+body.dark-mode .nav-link.active {
+    color: #88c0d8;
+}
+
 /* Navbar Style (Dark Mode) */
 body.dark-mode .navbar {
     background-color: rgba(34, 34, 34, 0.95);
