--- a/css/style.css
+++ b/css/style.css
@@ -282,15 +282,105 @@ body {
 .projects {
     padding: 100px 0;
     background: #f8f9fa;
+    justify-content: center;
+    align-items: center;
+}
+.projects-title-wrapper{
+    display: flex;
+    position: relative;
+    justify-content: center;
+
+}
+
+.project-filter {
+    list-style: none;
+    position: absolute;
+    right : 0;
+
+    display: flex;
+    justify-content: end;
+    transition: max-width 0.4s ease-in;
+    
+    max-width: 0;
+    min-width: 60px;
+    
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: visible;
+    
+    border-radius: 2rem;
+    height: 60px;
+    background-color: #f8f9fa;
+}
+
+
+
+
+
+
+
+.project-pill {
+    max-width: 500px;
+    background-color: #3498db;
+    
+}
+
+
+
+
+.project-filter button {
+    font-size: 1.2em;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: 60px;
+    width: 60px;
+    color: #2c3e50;
+    border-radius: 2rem;
+    list-style: none;
+    background-color: #f8f9fa;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.project-filter input {
+    display: none;
+    height: 100%;
+    font-size: 1em;
+    border: none;
+    background-color: #3498db;
+    padding: 0 1rem;
+    max-width: 200px;
+    color: white;
+    
+}
+
+.project-filter input:focus {
+    outline: none;
+}
+
+.project-filter:hover,
+.project-filter button:hover,
+.project-filter li:hover,
+.project-pill:hover {
+    background-color: #3498db;
+}
+
+.project-title {
+    align-self: center;
 }
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, 350px);
+    justify-content: start;
     gap: 2rem;
 }
 
 .project-card {
+    max-width: 370px;
     background: white;
     border-radius: 10px;
     overflow: hidden;
@@ -529,56 +619,82 @@ body {
 /* Back to Top Button */
 .back-to-top {
     display: none;
+    visibility: hidden;
+    opacity: 0;
+    
+    min-width: 54px;
+    max-width: 0;
+    
+    z-index: 99;
     position: fixed;
     bottom: 30px;
     right: 30px;
-    z-index: 99;
-    border: none;
-    outline: none;
+    
     background-color: #3498db;
-    color: white;
-    cursor: pointer;
-    opacity: 0;
-    visibility: hidden;
-    height : 54px;
-    width: 54px;
-    font-size: 20px;
+    
     border-radius: 2rem;
-    padding: 0 1rem;
+
     overflow: hidden;
-    transition: all 0.3s ease;
-    transform-origin: right;
+    transition: all 0.8s ease;
+
+    cursor: pointer;
 }
-.back-to-top .icon {
-    display: none;
+
+.back-to-top ul {
+    list-style: none;
+    display : flex;
+    flex-direction: row-reverse;
+    justify-content: end;
+    align-items: center;
 }
 
 .back-to-top.show {
     display: block;
-    opacity: 1;
     visibility: visible;
-    align-items: center;
+    opacity: 1;
+
+    
+    margin: 0;
+    padding: 0;
+
+}
+
+.back-to-top button {
+    display: flex;
     justify-content: center;
+    align-items: center;
+
+    border: none;
+    outline: none;
+    border-radius: 50%;
+    height: 54px;
+    width: 54px;
+    
+    cursor: pointer;
+
+    font-size: 20px;
+    color: white;
+    background-color: #3498db;
 
 }
 
-.back-to-top > i, .back-to-top > span {
-    margin : auto;
+.pill {
+    max-width: 300px;
 }
 
-/* tooltip as a pill button */
-.back-to-top.pill {
-    width: 220px; 
-    background-color:#2980b9;
-
-}
-
-.pillText {
+.pill-text {
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: visible;
+    text-overflow: hidden;
+
+    padding-left :1rem;
+
+    font-size: 20px;
+    color: white;
+
 
 }
+
 
 @media (max-width: 768px) {
     .back-to-top {
@@ -588,3 +704,4 @@ body {
         font-size: 16px;
     }
 }
+
